# libvhal-client

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Security.md  pkg-config.pc.cmake
aic-emu/: AicEmu.cc  CMakeLists.txt  CmdHandler.cc  CmdHandler.h  GfxHandler.cc  GfxHandler.h  SocketServer.cc  SocketServer.h  YmlParser.cc  YmlParser.h
bins/: CameraClient2
bins/linux/: VirtualGpsReceiverSample  VirtualInputReceiverSample  camera_client  camera_socket_client  sensor_client
data/: video-480p.h265
examples/: CMakeLists.txt  VirtualGpsReceiverSample.cpp  VirtualInputReceiverSample.cpp  audio_playback_client.cc  audio_record_client.cc  camera_client.cc  camera_client_app_template.cc  camera_socket_client.cc  command_channel_client.cc  host_camera_server.cc  hwc_example.cpp  sensor_client.cc  virtual_gps_receiver_sample.cc  virtual_input_receiver_sample.cc
include/: camera_sink.h  camera_vhal_protocol.h  istream_socket_client.h  sensor_interface.h  unix_socket.h  unix_socket_impl.h  unix_stream_socket_client.h  vhal_video_sink.h  video_sink.h
include/libvhal/: CMakeLists.txt  InputReceiver.h  VirtualGpsReceiver.h  VirtualInputReceiver.h  android_audio_core.h  audio_common.h  audio_sink.h  audio_source.h  command_channel_interface.h  display-protocol.h  hwc_vhal.h  input_receiver.h  istream_socket_client.h  libvhal_common.h  receiver_log.h  sensor_interface.h  tcp_stream_socket_client.h  unix_stream_socket_client.h  video_sink.h  virtual_gps_receiver.h  virtual_input_receiver.h  vsock_stream_socket_client.h
libs/linux/: libvhal-client.so.0  libvhal-client.so.0.1
source/: CMakeLists.txt  VirtualGpsReceiver.cpp  VirtualInputReceiver.cpp  audio_sink.cc  audio_sink_impl.h  audio_source.cc  audio_source_impl.h  camera_sink.cc  command_channel_interface.cc  command_channel_interface_impl.h  hwc_profile_log.cc  hwc_profile_log.h  hwc_vhal.cc  hwc_vhal_impl.h  receiver_log.h  sensor_interface.cc  sensor_interface_impl.h  status_prober.h  tcp_stream_socket_client.cc  tcp_stream_socket_client_impl.h  unix_socket.cc  unix_socket_impl.h  unix_stream_socket_client.cc  unix_stream_socket_client_impl.h  vhal_video_sink.cc  vhal_video_sink_impl.h  video_sink.cc  video_sink_impl.h  virtual_gps_receiver.cc  virtual_input_receiver.cc  vsock_stream_socket_client.cc  vsock_stream_socket_client_impl.h
tests/: test_unix_socket.cc  test_unix_stream_socket.cc
tmp/: camera_sink.h  camera_vhal_protocol.h  common.h  unix_socket.cc  unix_socket_impl.h
